# multica

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/frontend/: .gitkeep
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
apps/web/: next.config.ts
apps/web/app/: layout.tsx
apps/web/components/: empty-state.tsx  error-boundary.tsx
scripts/: build-desktop.sh  sync-upstream.sh
server/: go.mod  go.sum  sqlc.yaml
server/cmd/migrate/: main.go
server/cmd/multica/: cmd_channel.go  cmd_skill_import_local.go  main.go
server/cmd/server/: activity_listeners.go  embedded_daemon.go  main.go  notification_listeners.go  router.go  runtime_sweeper.go  subscriber_listeners.go
server/internal/auth/: cloudfront.go
server/internal/daemon/: daemon.go  prompt.go  types.go
server/internal/handler/: activity.go  agent.go  auth.go  channel.go  comment.go  daemon.go  dependency.go  file.go  handler.go  (+15 more)
server/migrations/: 032_local_agent_config.up.sql  032_local_project.down.sql  032_local_project.up.sql
server/migrations-sqlite/: 001_init.down.sql  001_init.up.sql  002_local_project.down.sql  002_local_project.up.sql  003_local_agents_and_skills.down.sql  003_local_agents_and_skills.up.sql  004_channels.down.sql  004_channels.up.sql  005_task_suggestions.down.sql  005_task_suggestions.up.sql  006_channel_tasks.down.sql  006_channel_tasks.up.sql
(+105 files in other folders)
